@@ -2,78 +2,92 @@ package com.sentinelvoice.config;
 
 import com.sentinelvoice.actuation.AsteriskAriAdapter;
 import com.sentinelvoice.actuation.CallControlPort;
+import com.sentinelvoice.actuation.CoreBankingWebhookService;
 import com.sentinelvoice.actuation.NoopAdapter;
-import com.sentinelvoice.actuation.SessionChannelRegistry;
 import com.sentinelvoice.actuation.WebRtcAdapter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.beans.factory.annotation.Qualifier;
+import org.springframework.boot.web.client.RestTemplateBuilder;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Lazy;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.web.client.RestTemplate;
 
-import java.util.Locale;
-import java.util.concurrent.ExecutorService;
+import java.time.Clock;
+import java.time.Duration;
+import java.util.concurrent.Executor;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadFactory;
-import java.util.concurrent.atomic.AtomicInteger;
 
 /**
- * Selects the call-control adapter and provides a dedicated ARI HTTP executor
- * so actuation never blocks the fusion ingest path.
+ * Selects the telephony actuation adapter and dedicated executor (Context §11.6).
  */
 @Configuration
 public class ActuationConfig {
 
     private static final Logger log = LoggerFactory.getLogger(ActuationConfig.class);
 
-    @Bean(destroyMethod = "shutdown")
-    public ExecutorService ariActuationExecutor() {
-        AtomicInteger seq = new AtomicInteger();
-        ThreadFactory factory = r -> {
-            Thread t = new Thread(r, "ari-actuation-" + seq.incrementAndGet());
-            t.setDaemon(true);
-            return t;
-        };
-        return Executors.newFixedThreadPool(4, factory);
+    @Bean
+    @Qualifier("ariRestTemplate")
+    public RestTemplate ariRestTemplate(RestTemplateBuilder builder, SentinelProperties properties) {
+        SentinelProperties.Ari ari = properties.actuation().ari();
+        return builder
+                .setConnectTimeout(Duration.ofMillis(ari.connectTimeoutMs()))
+                .setReadTimeout(Duration.ofMillis(ari.readTimeoutMs()))
+                .build();
+    }
+
+    @Bean(name = "actuationExecutor")
+    public Executor actuationExecutor() {
+        return Executors.newThreadPerTaskExecutor(Thread.ofVirtual().name("actuation-", 0).factory());
     }
 
     @Bean
     public CallControlPort callControlPort(
             SentinelProperties properties,
-            SessionChannelRegistry channelRegistry,
-            ExecutorService ariActuationExecutor,
-            // ObjectProvider: do not pull STOMP/WebSocket into the cycle for asterisk/noop.
-            ObjectProvider<SimpMessagingTemplate> messagingTemplate
+            @Qualifier("ariRestTemplate") RestTemplate ariRestTemplate,
+            @Lazy SimpMessagingTemplate messagingTemplate
     ) {
-        String adapter = properties.actuation().adapter() == null
-                ? "noop"
-                : properties.actuation().adapter().trim().toLowerCase(Locale.ROOT);
+        String adapter = properties.actuation().adapter().trim().toLowerCase();
         return switch (adapter) {
-            case "asterisk" -> {
+            case "asterisk", "asterisk-ari", "ari" -> {
+                SentinelProperties.Ari ari = properties.actuation().ari();
                 log.info(
-                        "actuation adapter=asterisk ariBaseUrl={}",
-                        properties.actuation().ariBaseUrl()
+                        "actuation_adapter=asterisk-ari baseUrl={} connectTimeoutMs={} readTimeoutMs={}",
+                        ari.baseUrl(),
+                        ari.connectTimeoutMs(),
+                        ari.readTimeoutMs()
                 );
-                yield new AsteriskAriAdapter(channelRegistry, properties.actuation(), ariActuationExecutor);
+                yield new AsteriskAriAdapter(
+                        ariRestTemplate,
+                        ari.baseUrl(),
+                        ari.username(),
+                        ari.password(),
+                        properties.actuation().supervisorEndpoint()
+                );
             }
             case "webrtc" -> {
-                log.info("actuation adapter=webrtc");
-                SimpMessagingTemplate template = messagingTemplate.getIfAvailable();
-                if (template == null) {
-                    log.warn("actuation adapter=webrtc but SimpMessagingTemplate missing — falling back to noop");
-                    yield new NoopAdapter();
-                }
-                yield new WebRtcAdapter(template);
+                log.info("actuation_adapter=webrtc");
+                yield new WebRtcAdapter(messagingTemplate);
             }
             default -> {
-                if (!"noop".equals(adapter)) {
-                    log.warn("unknown actuation.adapter={} — falling back to noop", adapter);
-                } else {
-                    log.info("actuation adapter=noop (safe default)");
-                }
+                log.info("actuation_adapter=noop (configured as '{}')", adapter);
                 yield new NoopAdapter();
             }
         };
+    }
+
+    @Bean
+    public CoreBankingWebhookService coreBankingWebhookService(
+            RestTemplate restTemplate,
+            Clock clock,
+            SentinelProperties properties
+    ) {
+        return new CoreBankingWebhookService(
+                restTemplate,
+                clock,
+                properties.actuation().cbsFreezeUrl()
+        );
     }
 }
